Register Subscription model in admin

--- a/home/templates/newsletter_unsubscribed.html
+++ b/home/templates/newsletter_unsubscribed.html
@@ -9,6 +9,6 @@
       <h2 class="text-warning">Unsubscribed?</h2>
       <p>We couldn’t find the email to unsubscribe. Please check the link or contact us.</p>
     {% endif %}
-    <a href="{% url 'home' %}" class="btn btn-primary mt-3">Back to Home</a>
+    <a href="{% url 'home' %}" class="btn btn-outline-primary mt-3">Back to Home</a>
   </div>
 {% endblock %}
